@@ -1,6 +1,8 @@
 package org.that.logic;
 
 import java.io.*;
+import java.nio.file.Files;
+import java.util.Scanner;
 
 public class BitmapUtil {
 
@@ -15,8 +17,12 @@ public class BitmapUtil {
 
     public static Bitmap read(File file) {
         try {
-            FileInputStream fis = new FileInputStream(file);
-            return new Bitmap(fis.readAllBytes());
+//            FileInputStream fis = new FileInputStream(file);
+//            byte[] ar = new byte[fis.available()];
+//            for (int i = 0; i < fis.available(); i++) {
+//                fis.read(new byte[i]);
+//            }
+            return new Bitmap(Files.readAllBytes(file.toPath()));
         } catch (IOException e) {
             e.printStackTrace();
         }
